--- a/DEMO WEB APP/pages/WebAppHome.html
+++ b/DEMO WEB APP/pages/WebAppHome.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhishTackle API Demo WebApp</title>
     <link rel="stylesheet" href="../styles/default.css">
+    <link rel="stylesheet" href="../styles/phishingForm.css">
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/jpg" href="../public/github-logo-circle.jpg">
@@ -60,23 +61,24 @@
         </div>
 
         <div class="section">
-            <form id="phishing-form" action="" method="GET">
+            <div id="phishing-form">
                 <div class="row justify-space-between section">
                     <div class="col phishing-form-inputs">
-                        <label for="text-contents">Text content to analyse:</label>
+                        <label class="form-label" for="text-contents">Text content to analyse:</label>
                         <textarea id="text-contents" name="text-contents"
                             placeholder="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos sapiente officiis modi at sunt excepturi expedita sint?"></textarea>
                     </div>
                     <div class="col phishing-form-inputs">
-                        <label for="links-list">Comma seperated list of urls:</label>
-                        <textarea id="links-list" name="links-list"
-                            placeholder="example@email.com, https://www.google.com, https://random.io"></textarea>
+                        <p class="form-label">List of urls: (Press Enter or add a comma after each url)</p>
+                        <ul id="links-list" name="links-list">
+                            <input id="url-listener" type="text" spellcheck="false" placeholder="www.example.com, https://www.google.com">
+                        </ul>    
                     </div>
                 </div>
                 <div class="col phishing-form-submit center-contents">
-                    <input class="btn" type="submit" value="Analyse">
+                    <input id="formButton" class="btn" type="submit" value="Analyse" onclick="parseUrls()">
                 </div>
-            </form>
+            </div>
         </div>
 
         <div class="response-box section">
@@ -89,8 +91,9 @@
 </body>
 
 <footer>
-    <script type="text/javascript" src="../scripts/apiRequests.js"></script>
     <script type="text/javascript" src="../scripts/webQOLscripts.js"></script>
+    <script type="text/javascript" src="../scripts/phishingForm.js"></script>
+    <script type="text/javascript" src="../scripts/apiRequests.js"></script>
 </footer>
 
 </html>
