updated some js targeting and css

--- a/DEMO WEB APP/pages/WebAppHome.html
+++ b/DEMO WEB APP/pages/WebAppHome.html
@@ -70,9 +70,11 @@
                     </div>
                     <div class="col phishing-form-inputs">
                         <p class="form-label">List of urls: (Press Enter or add a comma after each url)</p>
-                        <ul id="links-list" name="links-list">
-                            <input id="url-listener" type="text" spellcheck="false" placeholder="www.example.com, https://www.google.com">
-                        </ul>    
+                        <div id="links-container">
+                            <ul id="links-list" name="links-list">
+                                <input id="url-listener" type="text" spellcheck="false" placeholder="www.example.com, https://www.google.com">
+                            </ul>
+                        </div>   
                     </div>
                 </div>
                 <div class="col phishing-form-submit center-contents">
