created JSON object from WebApp Form and added notifications of errors using notifications.js

--- a/DEMO WEB APP/pages/WebAppHome.html
+++ b/DEMO WEB APP/pages/WebAppHome.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/jpg" href="../public/github-logo-circle.jpg">
+    <link rel="stylesheet" href="../styles/notifications.css">
+    <script src="../scripts/notifications.js"></script>
 </head>
 
 <body>
@@ -78,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col phishing-form-submit center-contents">
-                    <input id="formButton" class="btn" type="submit" value="Analyse" onclick="parseUrls()">
+                    <input id="formButton" class="btn" type="submit" value="Analyse" onclick="analyseForm()">
                 </div>
             </div>
         </div>
